[package]
name = "namur-cli"
version = "0.1.0"
edition = "2018"
authors = ["Pierre-Antoine Champin <pierre-antoine@w3.org>"]
description = "Namur, a.k.a. N3R, a Notation 3 reasoner"
repository = "https://github.com/pchampin/namur"
readme = "../README.md"
license = "CECILL-B"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
namur = { version="0.1.0", path="../lib" }
clap = "2.33.3"
